--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["src/types"],
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -29,6 +30,6 @@
     /* Testing */
     "types": ["bun-types"]
   },
-  "include": ["src"],
+  "include": ["src", "src/matchers.d.ts"],
   "exclude": ["src/**/*.test.tsx", "src/**/*.stories.tsx"]
 }
