--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     /* Testing */
     "types": ["bun-types"]
   },
-  "include": ["src", "src/matchers.d.ts"],
+  "include": ["src"],
   "exclude": ["src/**/*.test.tsx", "src/**/*.stories.tsx"]
 }
