--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "git",
     "url": "https://github.com/giacomorebonato/mino-daisy-react.git"
   },
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React component library wrapping DaisyUI components",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -21,7 +21,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "bun build src/index.ts --production --target=browser --outdir=dist && tsc --emitDeclarationOnly --declaration --declarationDir dist --noemit false",
+    "build": "bun build.ts && tsc --emitDeclarationOnly --declaration --declarationDir dist --noemit false",
     "dev": "bun build src/index.ts --watch",
     "test": "bun test",
     "storybook": "storybook dev -p 6006",
