--- a/package.json
+++ b/package.json
@@ -62,7 +62,15 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@lexical/html": "^0.38.2",
+    "@lexical/link": "^0.38.2",
+    "@lexical/list": "^0.38.2",
+    "@lexical/react": "^0.38.2",
+    "@lexical/rich-text": "^0.38.2",
+    "@lexical/selection": "^0.38.2",
+    "@lexical/utils": "^0.38.2",
     "clsx": "^2.1.1",
+    "lexical": "^0.38.2",
     "react-day-picker": "^9.11.1"
   },
   "private": false
