--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -26,16 +26,11 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.15.1
-
       - name: Install dependencies
-        run: pnpm install
+        run: bun install
 
       - name: Build Storybook
-        run: pnpm build-storybook
+        run: bun run build-storybook
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
