--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@typescript/native-preview": "^7.0.0-dev.20251212.1",
     "daisyui": "^5.4.5",
     "playwright": "^1.56.1",
     "react": "^19.2.0",
