--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,24 +30,18 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      - name: Set node
-        uses: actions/setup-node@v6
+      - uses: oven-sh/setup-bun@v2
         with:
-          node-version: lts/*
-          registry-url: "https://registry.npmjs.org"
+          bun-version: latest
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10.24.0
-          run_install: |
-            - args: [--frozen-lockfile]
+      - name: Install dependencies
+        run: bun install --frozen-lockfile
 
       - name: Build
-        run: pnpm build
+        run: bun run build
 
       - name: Release
-        run: npx release-it ${{ inputs.increment }}
+        run: bunx release-it ${{ inputs.increment }}
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NPM_CONFIG_PROVENANCE: true
