--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,5 @@
 name: Release
 
-permissions:
-  contents: write
-  id-token: write
-
 on:
   workflow_dispatch:
     inputs:
@@ -20,15 +16,13 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write # For git operations
+      id-token: write # < REQUIRED FOR OIDC
     steps:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
-
-      - name: Git config
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - uses: oven-sh/setup-bun@v2
         with:
