--- a/.release-it.json
+++ b/.release-it.json
@@ -7,13 +7,20 @@
   },
   "npm": {
     "publish": true,
-    "publishArgs": ["--provenance", "--access", "public"]
+    "publishArgs": [
+      "--provenance",
+      "--access",
+      "public"
+    ],
+    "skipChecks": true
   },
   "github": {
     "release": true,
     "releaseName": "Release ${version}"
   },
   "hooks": {
-    "before:init": ["bun run build"]
+    "before:init": [
+      "bun run build"
+    ]
   }
 }
