--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,6 @@ jobs:
         run: bun install --frozen-lockfile
 
       - name: Release
-        run: bunx release-it ${{ inputs.increment }} --ci
+        run: npx release-it ${{ inputs.increment }} --ci
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
