--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/giacomorebonato/mino-daisy-react.git"
+    "url": "git+https://github.com/giacomorebonato/mino-daisy-react.git"
   },
-  "version": "1.1.8",
+  "version": "1.1.9",
   "description": "React component library wrapping DaisyUI components",
   "type": "module",
   "main": "./dist/index.js",
