--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "format": "biome check --write",
-    "release": "release-it"
+    "release": "bunx --bun release-it"
   },
   "keywords": [
     "react",
